Fix overlapping in about menu

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,6 +23,7 @@ $secondary: #d3d3d3;
   right: 0;
   display: flex;
   flex-direction: column;
+  z-index: 99;
 }
 
 .main-header {
